Addressed PR comments: added environment WS config + unified private chat routing
- Added separate WebSocket configs for dev/test and prod environments: dev/test: allow * origins + expose /ws-stomp for Postman testing, prod: restrict allowed origins via app.frontend.origin
- Updated message logic: both private and public chats now follow consistent /topic/chat.{groupId} routing