@@ -1,12 +1,13 @@
-package com.example.kns.services;
+package com.example.kns.chat.service;
 
-import com.example.kns.dto.ChatMessageDTO;
-import com.example.kns.models.ChatMessage;
-import com.example.kns.repositories.ChatMessagesMapper;
+import com.example.kns.chat.dto.ChatMessageDTO;
+import com.example.kns.chat.model.ChatMessage;
+import com.example.kns.chat.repository.ChatMessagesRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.List;
 
@@ -15,7 +16,7 @@ import java.util.List;
 public class ChatMessageService {
 
 	private static final int MAX_MESSAGE_LENGTH = 2000;
-	private final ChatMessagesMapper mapper;
+	private final ChatMessagesRepository mapper;
 	private final SimpMessagingTemplate messagingTemplate;
 
 	@Scheduled(fixedRate = 1000)
@@ -23,34 +24,25 @@ public class ChatMessageService {
 		List<ChatMessage> fresh = mapper.findUnsentMessages(50);
 
 		for (ChatMessage msg : fresh) {
-			if (msg.getGroupId() != null) {
-				// Public chats
-				messagingTemplate.convertAndSend("/topic/chat." + msg.getGroupId(), msg);
-			} else if (msg.getReceiverId() != null) {
-				// Private chats
-				// messagingTemplate.convertAndSendToUser(msg.getReceiverId().toString(),
-				// "/queue/messages", msg);
-			}
+			messagingTemplate.convertAndSend("/topic/chat." + msg.getGroupId(), msg);
 			mapper.markAsSent(msg.getId());
 		}
 	}
 
 	public ChatMessage saveIncoming(ChatMessageDTO dto) {
 
-		if (dto.getContent() == null || dto.getContent().isBlank()) {
+		var content = dto.getContent();
+
+		if (StringUtils.isBlank(content)) {
 			throw new IllegalArgumentException("Message content is empty");
 		}
 
-		if (dto.getContent().length() > MAX_MESSAGE_LENGTH) {
+		if (content.length() > MAX_MESSAGE_LENGTH) {
 			throw new IllegalArgumentException("Message is too long (max 2000 chars)");
 		}
 
-		ChatMessage msg = new ChatMessage();
-		msg.setSenderId(dto.getSenderId());
-		msg.setReceiverId(dto.getReceiverId());
-		msg.setGroupId(dto.getGroupId());
-		msg.setContent(dto.getContent());
-		msg.setSent(false);
+		ChatMessage msg = ChatMessage.builder().senderId(dto.getSenderId()).groupId(dto.getGroupId())
+				.content(dto.getContent()).sent(false).build();
 
 		mapper.insert(msg);
 		return msg;
